# Demeter-Test

./: NuGet.Config  build.cake
DataAccess/: DataAccess.sln
DataAccess/UnitTestFlowManager/: UnitTest1.cs  UnitTestFlowManager.csproj
DataAccess/UnitySC.DataAccess.Base/: App.config  IRepositoryBase.cs  IUnitOfWorkBase.cs  UnitySC.DataAccess.Base.csproj
DataAccess/UnitySC.DataAccess.Dto/: ModelDto.tt  UnitySC.DataAccess.Dto.csproj
DataAccess/UnitySC.DataAccess.SQL/: App.config  DISPLAY-DELETE-JobsItems-DBv7.sql  DataContextConfiguration.cs  DatabaseVersionScript.sql  Db-ContentForRegisterSimu.sql  Db-ContentWaferCategory.sql  DropAll.sql  GetJobResult.sql  ModelSQL.tt  ModelSQL1.cs  ModifyRecipeTableINdexConstraint.sql  SQLTest-PocedureGetJobResult.sql  UnitOfWork.cs  UnitOfWork.tt  UnitOfWorkUnity.cs  UnityControl.Context.cs  UnityControl.Context.tt  UnityControl.Designer.cs  UnityControl.edmx  UnityControl.edmx.diagram  UnityControlEntities.cs  UnitySC.DataAccess.SQL.csproj  createfromschratch-test.sql  createfromschratch.sql
Dataflow/: UnitySC.Dataflow.sln
Dataflow/UnitySC.Dataflow.Client/: App.config  App.xaml  App.xaml.cs  Bootstrapper.cs  MainViewModel.cs  MainWindow.xaml  MainWindow.xaml.cs  UnitySC.Dataflow.Client.csproj
Dataflow/_ClientConfiguration/: ClientConfiguration.xml  log.config
Dataflow/_ServiceConfiguration/: log.DataflowService_RELEASE.config
ExternalProjects/Beckhoff/: DLC_Dev.sln0  DLC_LS_ElectricalRack.sln0  DLC_LS_V1+_Entire.sln0  DLC_Labo.sln0  (+21 more)
PM/ANALYSE/ExternalLibs/UnitySC.Algo/: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  UnitySC.Algo.vcxproj  UnitySC.Algo.vcxproj.filters  UnitySCPowerShell.cer  UnitySCPowerShell.pvk  conanfile.txt  files.cmake  installPrerequisites.ps1  installPrerequisites.sh
PM/ANALYSE/ExternalLibs/UnitySC.Algo/TestAlgoApp/: README.md  TestAlgoApp.slntmp
PM/ANALYSE/ExternalLibs/UnitySC.Algo/TestAlgoApp/TestAlgoApp/: TestAlgoApp.cpp  TestAlgoApp.vcxproj  TestAlgoApp.vcxproj.filters
PM/ANALYSE/ExternalLibs/UnitySC.Algo/Wrapper/: BareWaferAlignment.cpp  BareWaferAlignment.h  BareWaferAlignmentImageData.h  CMakeLists.txt  EdgeDetector.cpp  EdgeDetector.h  ImageData.h  ImageOperators.cpp  ImageOperators.h  ManagedEventQueue.cpp  ManagedEventQueue.h  PhaseShiftingInterferometry.cpp  PhaseShiftingInterferometry.h  Registration.cpp  Registration.h  ShapeDetector.cpp  ShapeDetector.h  SpikeDetector.cpp  SpikeDetector.h  Tools.cpp  Tools.h  TypeAdapters.cpp  TypeAdapters.h  files.cmake
PM/ANALYSE/ExternalLibs/UnitySC.Algo/Wrapper/tests/: CMakeLists.txt  Helpers.cs  UT_bareWaferAlignment.cs  UT_imgOperators.cs  UT_logger.cs  UT_registration.cs  UT_shapeDetector.cs  UT_spikeDetector.cs  files.cmake
PM/ANALYSE/ExternalLibs/UnitySC.Algo/Wrapper/tests/data/: cat_gray32float.tif  cat_gray32float_blured_with_median_kernel_3.tif  cat_gray32float_blured_with_median_kernel_5.tif  cat_gray8_overexposed.tif  cat_rgb24.tif  cat_rgb24_blured_with_median_kernel_3.tif  cat_rgb24_blured_with_median_kernel_5.tif
PM/ANALYSE/ExternalLibs/UnitySC.Algo/doc/bare wafer alignment/: BareWaferAlignment.md
PM/ANALYSE/ExternalLibs/UnitySC.Algo/include/: EdgeImage.hpp  Event.hpp  EventHandler.hpp  EventQueue.hpp  HyperAccurateCircleFitter.hpp  ICircleFitter.hpp  ImageTypeConvertor.hpp  Linspace.hpp  Logger.hpp  NamedType.hpp  NotchImage.hpp  Point.hpp  PolarImageCropper.hpp  PolarTransform.hpp  ReportingUtils.hpp  Status.hpp  SymmetryDetector.hpp  Wafer.hpp  WaferImageGenerator.hpp  matplotlibcpp.h
PM/ANALYSE/ExternalLibs/UnitySC.Algo/include/BaseAlgos/: 1DSignalAnalysis.hpp  2DSignalAnalysis.hpp  EdgeDetector.hpp  Filters.hpp  ImageOperators.hpp  Registration.hpp  ShapeFinder.hpp
PM/ANALYSE/ExternalLibs/UnitySC.Algo/include/Topography/: GoldsteinUnwrap.hpp  PhaseMapping.hpp  PhaseShiftingInterferometry.hpp  QualGuidedUnwrap.hpp  ReliabilityHistUnwrap.hpp
PM/ANALYSE/ExternalLibs/UnitySC.Algo/scripts/: post.sh  pre.sh
PM/ANALYSE/ExternalLibs/UnitySC.Algo/src/: EdgeImage.cpp  Event.cpp  EventQueue.cpp  HyperAccurateCircleFitter.cpp  ImageTypeConvertor.cpp  NotchImage.cpp  Point.cpp  PolarImageCropper.cpp  PolarTransform.cpp  ReportingUtils.cpp  SymmetryDetector.cpp  Wafer.cpp  WaferImageGenerator.cpp
PM/ANALYSE/ExternalLibs/UnitySC.Algo/src/BaseAlgos/: 1DSignalAnalysis.cpp  2DSignalAnalysis.cpp  EdgeDetector.cpp  Filters.cpp  ImageOperators.cpp  Registration.cpp  ShapeFinder.cpp
PM/ANALYSE/ExternalLibs/UnitySC.Algo/src/Topography/: GoldsteinUnwrap.cpp  PhaseMapping.cpp  PhaseShiftingInterferometry.cpp  QualGuidedUnwrap.cpp  ReliabilityHistUnwrap.cpp
PM/ANALYSE/ExternalLibs/UnitySC.Algo/tests/: test_CircleFitter.cpp  test_EdgeImage.cpp  test_EventQueue.cpp  test_ImageTypeConvertor.cpp  test_Linspace.cpp  test_Logger.cpp  test_NotchImage.cpp  test_Point.cpp  test_PolarImageCropper.cpp  test_PolarTransform.cpp  test_SymmetryDetector.cpp  test_Wafer.cpp  test_WaferImageGenerator.cpp  test_imgOperators.cpp  test_phaseMapping.cpp  test_phaseUnwrapping.cpp  test_registration.cpp  test_shapeFinder.cpp  test_spikeDetector.cpp
PM/ANALYSE/ExternalLibs/UnitySC.Algo/tests/data/1DSignal/: LiseSignal_peaks(1445_9035_9152_23545_23660_31250)_drops(from_16084_to_16649).csv
PM/ANALYSE/ExternalLibs/UnitySC.Algo/tests/data/synth_aligned/: README.txt  dummyFullWafer.xcf  synth_alignedTest.cpp
PM/ANALYSE/ExternalLibs/UnitySC.Algo/tests/data/synth_rotated/: base.xcf  notch_rot_2.txt
PM/ANALYSE/ExternalLibs/UnitySC.Algo/tests/data/synth_shifted/: README.txt  dummyFullWafer.xcf  synth_shiftedTest.cpp
Pipelines/: ANA_Manual_DeliveryAsZip.yml  USP_CI_AllBranchesExceptDevelopAndmaster.yml  USP_CI_Develop.yml  USP_CI_NewAdcDevelop.yml  USP_CI_master.yml  USP_Manual_PushExternalNugetPackageToExternalNugetPackageArtifacts.yml  USP_Manual_PushSharedAlgosCpp.yml  USP_Manual_PushSharedAlgosOpenCV.yml  USP_Manual_SetUpInstall.yml  USP_Release.yml  USP_Release_Suite.yml
UTO/: .editorconfig  Directory.Build.props  README.md  UnitySC.UTO.Controller.sln  UnitySC.UTO.Controller.sln.DotSettings  build-dist.cmd  global.json  nuget.config
(+11951 files in other folders)
